--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -11,13 +11,7 @@
 
 .logo {
     cursor: pointer;
-}
-
-.nav {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
+    height: 29px;
 }
 
 .item {
@@ -29,4 +23,17 @@
 
 .item:hover {
     text-decoration: underline;
+}
+
+@media screen and (max-width: 636px) {
+    .header {
+        width: 100%;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        padding: 0px 20px;
+        background: #FFFFFF;
+        box-shadow: 0px 1px 0px rgba(17, 17, 17, 0.1);
+        position: relative;
+    }
 }
